<?xml version="1.0" encoding="utf-8"?>
<resources>

	<!-- Actions -->
	<string name="label_home">Home</string>
	<string name="label_settings">Settings</string>
	<string name="label_move">Move</string>
	<string name="label_refresh">Refresh</string>
	<string name="label_logout">Logout</string>
	<string name="label_close">Close</string>

	<!-- Buttons -->
	<string name="save">save</string>
	<string name="cancel">cancel</string>

	<!-- Alert dialog -->
	<string name="error_title">Ops!</string>
	<string name="send_report_button">Send error</string>
	<string name="ok_button">OK</string>
	<string name="cancel_button">Cancel</string>

	<!-- Wait dialog -->
	<string name="wait_title">Wait!</string>
	<string name="starting_app">Waking up the pig…</string>
	<string name="wait_text">Calling the Pig&#8230;</string>

	<!-- Errors -->
	<string name="u_r_offline">You\'re offline</string>
	<string name="error_set_parameters">Error on set parameters</string>
	<string name="internet_too_slow">Problems while connecting to website, please check your internet connection</string>
	<string name="error_contact_url">
		Error on contacting the Pig. It\'s either a internet problem or a system issue.
		If it\'s the second option, the error is recorded and we will solve it as soon as possible.
	</string>
	<string name="body_null">
		Error on contacting the Pig. The error is recorded and we will solve it as soon as possible.
	</string>
	<string name="uninvited">You are uninvited!</string>

	<!-- Login -->
	<string name="email">e-mail</string>
	<string name="password">password</string>
	<string name="login">login</string>

	<!-- Accounts -->
	<string name="title_activity_accounts">Accounts</string>
	<string name="no_accounts">There is no accounts</string>

	<!-- Reports -->
	<string name="title_activity_extract">Extract</string>
	<string name="title_activity_summary">Year summary</string>
	<string name="no_extract">There is no moves for this month</string>
	<string name="no_summary">There is no moves for this year</string>
	<string name="total">%s total</string>
	<string name="change_date">change</string>
	<string name="sure_to_delete">Do you really want to DELETE Move \'%s\'?"</string>
	<string name="edit">edit</string>
	<string name="delete">delete</string>
	<string name="check">check</string>
	<string name="uncheck">uncheck</string>

	<!-- Move -->
	<string name="title_activity_move">Move</string>
	<string name="description">description</string>
	<string name="date">date</string>
	<string name="category">category</string>
	<string name="nature">nature</string>
	<string name="account">account</string>
	<string name="value">value</string>
	<string name="amount">qty</string>
	<string name="pick">pick</string>
	<string name="use_detailed">go to detailed</string>
	<string name="use_simple">back to single value</string>
	<string name="add_detail">+</string>
	<string name="remove_detail">–</string>
	<string name="fill_all">Fill all fields to add a detail.</string>
	<string name="account_in">account in</string>
	<string name="account_out">account out</string>
	<string name="no_accounts_move">
		There are no accounts.\nWithout accounts, you cannot create Moves.
	</string>
	<string name="no_categories_move">
		There is no categories.\nYou can create a Move without Category,
		but you need to go to Settings and disable categories use.
	</string>
	<string name="losingCategory">
		This move has a category originally, but the Categories use are disabled.\n
		The category will be lost if you edit this move.
	</string>
	<string name="removingCheck">
		This move is marked as checked.\n
		When you save this move, the check will be removed.
	</string>
	<string name="out">out</string>
	<string name="OUT">OUT</string>
	<string name="transfer">transfer</string>
	<string name="TRANSFER">TRANSFER</string>
	<string name="in">in</string>
	<string name="IN">IN</string>
	<string name="clear">- clear -</string>

	<!-- Settings -->
	<string name="title_activity_settings">Settings</string>
	<string name="settings_warning">This settings applies to mobile and web</string>
	<string name="use_categories">Use categories</string>
	<string name="settings_saved">Settings applied!</string>
	<string name="move_check">Move can be checked / unchecked</string>
	<string name="error_mail_title">Error on DfM App</string>
	<string name="timeout">Request timeout</string>
	<string name="verify">verify</string>
	<string name="two_factor_code">two factor code</string>
	<string name="long_click_warning">hold for a while to execute the action</string>
	<string name="site">Site</string>
	<string name="version">App Version</string>
	<string name="error_call_api">Error on calling the site, contact us</string>
	<string name="error_call_api_email" translatable="false">Error on calling api, object null</string>
	<string name="error_not_identified">Not identified site error. Contact us.</string>

	<!-- Service -->
	<string name="service_error_title">Site error check</string>

</resources>
