<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical"
	android:paddingBottom="@dimen/activity_vertical_margin"
	android:paddingLeft="@dimen/activity_horizontal_margin"
	android:paddingRight="@dimen/activity_horizontal_margin"
	android:paddingTop="@dimen/activity_vertical_margin"
	tools:context=".settings.SettingsActivity" >

	<TextView
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:gravity="center"
		android:text="@string/settings_warning" />

	<View android:layout_width="fill_parent" android:layout_height="35dp" />

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal" >

		<CheckBox
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:id="@+id/use_categories" />
		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/use_categories" />

	</LinearLayout>

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal" >

		<CheckBox
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:id="@+id/move_check" />
		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/move_check" />

	</LinearLayout>

	<View android:layout_width="fill_parent" android:layout_height="35dp" />

	<LinearLayout
		android:layout_width="fill_parent"
		android:layout_height="0sp"
		android:layout_weight="1">

		<Button
			android:text="@string/cancel"
			android:layout_width="0dp"
			android:layout_weight="1"
			android:layout_height="wrap_content"
			android:onClick="back" />

		<Button
			android:text="@string/save"
			android:layout_width="0dp"
			android:layout_weight="1"
			android:layout_height="wrap_content"
			android:onClick="saveSettings" />
	</LinearLayout>

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal"
		android:gravity="bottom">
		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/site" />

		<TextView
			android:id="@+id/site"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:gravity="end" />
	</LinearLayout>

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal"
		android:gravity="bottom">
		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/version" />

		<TextView
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:gravity="end"
			android:id="@+id/version" />
	</LinearLayout>

	<include layout="@layout/bottom_menu" />

</LinearLayout>
