<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	tools:context=".moves.MovesActivity"
	android:paddingBottom="@dimen/activity_vertical_margin"
	android:paddingLeft="@dimen/activity_horizontal_margin"
	android:paddingRight="@dimen/activity_horizontal_margin"
	android:paddingTop="@dimen/activity_vertical_margin"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical">

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="0dp"
		android:layout_weight="1"
		android:visibility="gone"
		android:orientation="vertical"
		android:id="@+id/warnings">

		<TextView
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:id="@+id/no_accounts"
			android:text="@string/no_accounts_move"
			android:visibility="gone"
			android:textSize="20sp"
			android:gravity="top|center"
			android:paddingBottom="20sp" />

		<TextView
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:id="@+id/no_categories"
			android:text="@string/no_categories_move"
			android:visibility="gone"
			android:textSize="20sp"
			android:gravity="top|center" />

	</LinearLayout>

	<ScrollView
		android:id="@+id/form"
		android:layout_width="match_parent"
		android:layout_height="0dp"
		android:layout_weight="1"
		android:orientation="vertical">

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="vertical">

			<TextView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:id="@+id/remove_check"
				android:text="@string/removingCheck"
				android:visibility="gone"
				android:gravity="top|center" />

			<TextView
				android:id="@+id/description_label"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:text="@string/description"
				android:labelFor="@+id/description" />

			<EditText
				android:id="@+id/description"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:inputType="text" />

			<include layout="@layout/separator" />

			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:orientation="horizontal"
				android:baselineAligned="false">

				<Button
					android:text="@string/date"
					android:layout_width="0sp"
					android:layout_weight="1"
					android:layout_height="wrap_content"
					android:id="@+id/date"
					android:onClick="showDatePicker" />

				<Button
					android:text="@string/category"
					android:id="@+id/category"
					android:layout_width="0sp"
					android:layout_weight="1"
					android:layout_height="wrap_content"
					android:onClick="changeCategory" />

				<Button
					android:text="@string/category"
					android:id="@+id/lose_category"
					android:layout_width="0sp"
					android:layout_weight="1"
					android:layout_height="wrap_content"
					android:onClick="warnLoseCategory"
					android:visibility="gone" />

			</LinearLayout>

			<include layout="@layout/separator" />

			<LinearLayout
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:baselineAligned="false"
				android:orientation="horizontal">

				<Button
					android:text="@string/nature"
					android:id="@+id/nature"
					android:layout_width="0sp"
					android:layout_weight="1"
					android:layout_height="fill_parent"
					android:onClick="changeNature" />

				<LinearLayout
					android:layout_width="0sp"
					android:layout_weight="1"
					android:layout_height="fill_parent"
					android:baselineAligned="false"
					android:orientation="vertical">

					<Button
						android:text="@string/account_out"
						android:id="@+id/account_out"
						android:layout_width="fill_parent"
						android:layout_height="wrap_content"
						android:onClick="changeAccountOut"
						android:visibility="visible"/>

					<Button
						android:text="@string/account_in"
						android:id="@+id/account_in"
						android:layout_width="fill_parent"
						android:layout_height="wrap_content"
						android:onClick="changeAccountIn"
						android:visibility="gone"/>

				</LinearLayout>
			</LinearLayout>

			<include layout="@layout/separator" />

			<LinearLayout
				android:id="@+id/simple_value"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:orientation="vertical">

				<LinearLayout
					android:layout_width="fill_parent"
					android:layout_height="wrap_content"
					android:orientation="horizontal">
					<TextView
						android:id="@+id/value_label"
						android:layout_width="0dp"
						android:layout_weight="14"
						android:layout_height="wrap_content"
						android:hint="@string/value"
						android:labelFor="@+id/value" />
					<Button
						android:text="@string/use_detailed"
						android:textSize="12sp"
						android:layout_width="0dp"
						android:layout_weight="3"
						android:layout_height="wrap_content"
						android:onClick="useDetailed" />
				</LinearLayout>

				<EditText
					android:id="@+id/value"
					android:layout_width="fill_parent"
					android:layout_height="wrap_content"
					android:inputType="numberDecimal"
					android:digits="0123456789,."
				/>

			</LinearLayout>


			<LinearLayout
				android:id="@+id/detailed_value"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:orientation="vertical"
				android:visibility="gone">

				<LinearLayout
					android:layout_width="fill_parent"
					android:layout_height="wrap_content">

					<TextView
						android:text="@string/description"
						android:textSize="12sp"
						android:layout_width="0dp"
						android:layout_weight="8"
						android:layout_height="wrap_content"
						android:labelFor="@+id/detail_description" />
					<TextView
						android:text="@string/amount"
						android:textSize="12sp"
						android:layout_width="0dp"
						android:layout_weight="2"
						android:gravity="center"
						android:layout_height="wrap_content"
						android:labelFor="@+id/detail_amount" />
					<TextView
						android:text="@string/value"
						android:textSize="12sp"
						android:layout_width="0dp"
						android:layout_weight="4"
						android:gravity="center"
						android:layout_height="wrap_content"
						android:labelFor="@+id/detail_value"  />
					<Button
						android:text="@string/use_simple"
						android:textSize="12sp"
						android:layout_width="0dp"
						android:layout_weight="3"
						android:layout_height="wrap_content"
						android:onClick="useSimple" />

				</LinearLayout>

				<LinearLayout
					android:layout_width="fill_parent"
					android:layout_height="wrap_content">

					<EditText
						android:id="@+id/detail_description"
						android:textSize="14sp"
						android:layout_width="0dp"
						android:layout_weight="8"
						android:layout_height="wrap_content"
						android:inputType="text" />
					<EditText
						android:id="@+id/detail_amount"
						android:textSize="14sp"
						android:layout_width="0dp"
						android:layout_weight="2"
						android:layout_height="wrap_content"
						android:text="@integer/amount_default"
						android:inputType="number" />
					<EditText
						android:id="@+id/detail_value"
						android:textSize="14sp"
						android:layout_width="0dp"
						android:layout_weight="4"
						android:layout_height="wrap_content"
						android:inputType="numberDecimal"
						android:digits="0123456789,." />
					<Button
						android:text="@string/add_detail"
						android:textSize="12sp"
						android:layout_width="0dp"
						android:layout_weight="3"
						android:layout_height="wrap_content"
						android:onClick="addDetail" />

				</LinearLayout>

				<LinearLayout
					android:id="@+id/details"
					android:orientation="vertical"
					android:layout_width="fill_parent"
					android:layout_height="wrap_content">
				</LinearLayout>

			</LinearLayout>

			<LinearLayout
				android:layout_width="fill_parent"
				android:layout_height="wrap_content">

				<Button
					android:text="@string/cancel"
					android:layout_width="0dp"
					android:layout_weight="1"
					android:layout_height="wrap_content"
					android:onClick="back" />

				<Button
					android:text="@string/save"
					android:layout_width="0dp"
					android:layout_weight="1"
					android:layout_height="wrap_content"
					android:onClick="save" />
			</LinearLayout>
		</LinearLayout>


	</ScrollView>

	<include layout="@layout/bottom_menu" />

</LinearLayout>
