<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	tools:context=".activities.MovesCreateActivity"
	android:id="@+id/window"
	android:paddingBottom="@dimen/activity_vertical_margin"
	android:paddingLeft="@dimen/activity_horizontal_margin"
	android:paddingRight="@dimen/activity_horizontal_margin"
	android:paddingTop="@dimen/activity_vertical_margin"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical">

	<ScrollView
		android:layout_width="match_parent"
		android:layout_height="0dp"
		android:layout_weight="1"
		android:orientation="vertical">

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="vertical">

			<TextView
				android:id="@+id/description_label"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:text="@string/description" />

			<EditText
				android:id="@+id/description"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:inputType="text" />


			<View android:layout_width="fill_parent" android:layout_height="35dp" />


			<TextView
				android:id="@+id/date_label"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:hint="@string/date" />

			<Button
				android:text="@string/pick"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:id="@+id/date"
				android:onClick="showDatePicker" />


			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:orientation="vertical"
				android:id="@+id/category_box">

				<View android:layout_width="fill_parent" android:layout_height="35dp" />

				<TextView
					android:id="@+id/category_label"
					android:layout_width="fill_parent"
					android:layout_height="wrap_content"
					android:text="@string/category" />

				<Button
					android:text="@string/pick"
					android:id="@+id/category"
					android:layout_width="fill_parent"
					android:layout_height="wrap_content"
					android:onClick="changeCategory" />
			</LinearLayout>


			<View android:layout_width="fill_parent" android:layout_height="35dp" />


			<TextView
				android:id="@+id/nature_label"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:hint="@string/nature" />

			<Button
				android:text="@string/pick"
				android:id="@+id/nature"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:onClick="changeNature" />


			<LinearLayout
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:baselineAligned="false"
				android:orientation="horizontal">

				<LinearLayout
					android:layout_width="0dp"
					android:layout_weight="1"
					android:layout_height="wrap_content"
					android:orientation="vertical"
					android:baselineAligned="false"
					android:id="@+id/account_out_block"
					android:visibility="visible">

					<TextView
						android:id="@+id/account_out_label"
						android:layout_width="fill_parent"
						android:layout_height="wrap_content"
						android:hint="@string/account_out"/>

					<Button
						android:text="@string/pick"
						android:id="@+id/account_out"
						android:layout_width="fill_parent"
						android:layout_height="wrap_content"
						android:onClick="changeAccountOut"/>
				</LinearLayout>

				<LinearLayout
					android:layout_width="0dp"
					android:layout_weight="1"
					android:layout_height="wrap_content"
					android:orientation="vertical"
					android:baselineAligned="false"
					android:id="@+id/account_in_block"
					android:visibility="gone">

					<TextView
						android:id="@+id/account_in_label"
						android:layout_width="fill_parent"
						android:layout_height="wrap_content"
						android:hint="@string/account_in" />

					<Button
						android:text="@string/pick"
						android:id="@+id/account_in"
						android:layout_width="fill_parent"
						android:layout_height="wrap_content"
						android:onClick="changeAccountIn" />

				</LinearLayout>

			</LinearLayout>


			<View android:layout_width="fill_parent" android:layout_height="35dp" />


			<LinearLayout
				android:id="@+id/simple_value"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:orientation="vertical">

				<LinearLayout
					android:layout_width="fill_parent"
					android:layout_height="wrap_content"
					android:orientation="horizontal">
					<TextView
						android:id="@+id/value_label"
						android:layout_width="0dp"
						android:layout_weight="14"
						android:layout_height="wrap_content"
						android:hint="@string/value" />
					<Button
						android:text="@string/use_detailed"
						android:textSize="12sp"
						android:layout_width="0dp"
						android:layout_weight="3"
						android:layout_height="wrap_content"
						android:onClick="useDetailed" />
				</LinearLayout>

				<EditText
					android:id="@+id/value"
					android:layout_width="fill_parent"
					android:layout_height="wrap_content"
					android:inputType="numberDecimal" />

			</LinearLayout>


			<LinearLayout
				android:id="@+id/detailed_value"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:orientation="vertical"
				android:visibility="gone">

				<LinearLayout
					android:layout_width="fill_parent"
					android:layout_height="wrap_content">

					<TextView
						android:text="@string/description"
						android:textSize="12sp"
						android:layout_width="0dp"
						android:layout_weight="8"
						android:layout_height="wrap_content" />
					<TextView
						android:text="@string/amount"
						android:textSize="12sp"
						android:layout_width="0dp"
						android:layout_weight="2"
						android:gravity="center"
						android:layout_height="wrap_content" />
					<TextView
						android:text="@string/value"
						android:textSize="12sp"
						android:layout_width="0dp"
						android:layout_weight="4"
						android:gravity="center"
						android:layout_height="wrap_content" />
					<Button
						android:text="@string/use_simple"
						android:textSize="12sp"
						android:layout_width="0dp"
						android:layout_weight="3"
						android:layout_height="wrap_content"
						android:onClick="useSimple" />

				</LinearLayout>

				<LinearLayout
					android:layout_width="fill_parent"
					android:layout_height="wrap_content">

					<EditText
						android:id="@+id/detail_description"
						android:textSize="14sp"
						android:layout_width="0dp"
						android:layout_weight="8"
						android:layout_height="wrap_content"
						android:inputType="text" />
					<EditText
						android:id="@+id/detail_amount"
						android:textSize="14sp"
						android:layout_width="0dp"
						android:layout_weight="2"
						android:layout_height="wrap_content"
						android:text="@integer/amount_default"
						android:inputType="number" />
					<EditText
						android:id="@+id/detail_value"
						android:textSize="14sp"
						android:layout_width="0dp"
						android:layout_weight="4"
						android:layout_height="wrap_content"
						android:inputType="numberDecimal" />
					<Button
						android:text="@string/add_detail"
						android:textSize="12sp"
						android:layout_width="0dp"
						android:layout_weight="3"
						android:layout_height="wrap_content"
						android:onClick="addDetail" />

				</LinearLayout>

				<LinearLayout
					android:id="@+id/details"
					android:orientation="vertical"
					android:layout_width="fill_parent"
					android:layout_height="wrap_content">
				</LinearLayout>

			</LinearLayout>

			<LinearLayout
				android:layout_width="fill_parent"
				android:layout_height="wrap_content">

				<Button
					android:text="@string/cancel"
					android:layout_width="0dp"
					android:layout_weight="1"
					android:layout_height="wrap_content"
					android:onClick="back" />

				<Button
					android:text="@string/save"
					android:layout_width="0dp"
					android:layout_weight="1"
					android:layout_height="wrap_content"
					android:onClick="save" />
			</LinearLayout>
		</LinearLayout>


	</ScrollView>

	<include layout="@layout/bottom_menu" />

</LinearLayout>