<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	tools:context=".Login"
	android:paddingBottom="@dimen/activity_vertical_margin"
	android:paddingLeft="@dimen/activity_horizontal_margin"
	android:paddingRight="@dimen/activity_horizontal_margin"
	android:paddingTop="@dimen/activity_vertical_margin"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical"
	android:gravity="center" >

	<EditText
		android:id="@+id/email"
 		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:hint="@string/email"
		android:inputType="textEmailAddress" />

	<EditText
		android:id="@+id/password"
 		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:hint="@string/password"
		android:inputType="textPassword" />

	<Button
		android:id="@+id/login_button"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:text="@string/login"
		android:onClick="login" />

</LinearLayout>
